Unified: Hide tooltip in user chooser view.

This CL hides tooltip in user chooser view when there is enough space to
show both the name and the email.

TEST=manual
BUG=889415

Change-Id: I0c02e4bb78c0dfbd81700afe24b8cc9ebe423ea2
Reviewed-on: https://chromium-review.googlesource.com/c/1304179
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603723}
Former-commit-id: ced81f04ffca1c2598490de94f6b083352c6bab7